movie.css
@import url('https://fonts.googleapis.com/css2?family=Audiowide&family=Germania+One&display=swap');

*{
    box-sizing: border-box;
}



body{
    background-color: #1D201E;
}

.navbar .movie{
    height:10px;
    width:10px;
}
.logo{
    width:8%;
    padding:10px;
}
.navbar{
    background-color: #2E312F;
    padding:5px;
    height: 60px;

}

.search-bar{
    float:right;
    padding-top:10px;
    padding-right: 10px;
}

form{
    background-color: #525452;
    width: 280px;
    height: 40px;
    border-radius: 20px;
    display: flex;
    align-items:center;
}

form ::placeholder{
    font-size: 1.5rem;
}

input{
    all:unset;
    padding:10px; 
    font-size:20px;  
    height:100%;
    width:100%;
    align-items: center;
    justify-content: center;
    justify-items: center;
    color: azure; 
}

.movie-title .card{
    height:350px;
    width:200px;
    padding:7px;
    border-radius: 17px;
    

}
.movie-title{
    border-radius: 10px;
    padding:7px;
    text-align:center;
    font-size:20px;
    background-color:#686768;
    overflow:hidden;
}
.movie-title:hover{
    
    background-color:#2c2c2c;
    
    
}

h3{
    display: block;
    color: white;
}

.column{
    float:left;
    width:25%;
    padding: 10px 10px;
}

